--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/hero.css">
+    <link rel="stylesheet" href="assets/css/section1.css">
     <title>Riseloka - Reselling For Better Living</title>
 </head>
 <body>
@@ -42,6 +43,36 @@
     <!--CONTENT END-->
 </div>
 <!--HERO END-->
+<section id="section1" class="section1">
+    <div class="content">
+        <h5>Mau jualan tapi<br>gak punya produk?</h5>
+        <p>Tersedia ribuan produk ORIGINAL siap jual <br>
+            langsung dari produsen.</p>
+    </div>
+    <div class="banner">
+        <img src="assets/image/banner-section1.png" alt="Produk Riseloka">
+    </div>
+</section>
+<section id="overview" class="overview">
+    <div class="item-overview">
+        <img src="assets/image/home.svg" alt="Home">
+        <h5>Whitelabel Dropship</h5>
+        <p>Kami pastikan setiap barang yang <br>
+            dikirim adalah atas nama Anda.</p>
+    </div>
+    <div class="item-overview">
+        <img src="assets/image/resi.svg" alt="Home">
+        <h5>Resi Otomatis</h5>
+        <p>Platform paling support untuk berjualan <br>
+            di marketplace manapun / FB Ads.</p>
+    </div>
+    <div class="item-overview">
+        <img src="assets/image/cog.svg" alt="Home">
+        <h5>Bimbingan Teknis</h5>
+        <p>Dibimbing untuk menghasilkan 3 juta <br>
+            pertama mu berjualan online.</p>
+    </div>
+</section>
 <script src="assets/script.js"></script>
 </body>
 </html>
