--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/hero.css">
     <link rel="stylesheet" href="assets/css/section1.css">
+    <link rel="stylesheet" href="assets/css/peta.css">
     <title>Riseloka - Reselling For Better Living</title>
 </head>
 <body>
@@ -71,6 +72,15 @@
         <h5>Bimbingan Teknis</h5>
         <p>Dibimbing untuk menghasilkan 3 juta <br>
             pertama mu berjualan online.</p>
+    </div>
+</section>
+<section id="peta" class="peta">
+    <h5>Gabung bersama <br>
+        puluhan ribu reseller</h5>
+    <p>Jualan online untuk kehidupan lebih baik.</p>
+    <div class="buttons">
+        <button class="primary-outline">Dapatkan di appstore</button>
+        <button class="primary">Download di playstore</button>
     </div>
 </section>
 <script src="assets/script.js"></script>
